--- a/README
+++ b/README
@@ -1,19 +1,42 @@
-# axulator
+Axulator
+========
 
-Axulator is a simple little utility to evaluate battles for the game Axis & Allies.  It helps players of the game evaluate the odds of winning a particular battle between forces by simulating the battle and providing basic statistics on the outcome.
+Axulator is a simple  tool to evaluate battles for the game Axis & Allies.  It helps players of the game evaluate the odds of winning a particular battle between forces by simulating the battle and providing basic statistics on the outcome.  It can also help a player figure out what types of units to buy/build by estimating the changes of winning defensive or offensive battles for territory.
 
-## Usage
+Usage
+-----
 
-At this point, you can evaluate the number of hits for an attacking or defending force by:
+First, an attacking or defending force is represented as a vector of vectors.  For a force consisting of three infantry and seven armor units, we would have:
 
-  (force-hits :attack [[5 :infantry] [10 :armor] [2 :fighter]] (d6))
+    [[3 :infantry] [7 :armor]]
 
-  (force-hits :defned [[20 :infantry] [2 :armor]] (d6))
+A battle lineup consists of a hash of forces, defining which is the attacker and which is the defender, e.g.:
 
-As it is developed further, it will iterate over a particular battle and provide stats to help
-assess the probability of either side winning.
+    { :attacker [[5 :infantry] [10 :armor] [1 :fighter]}
+      :defender [[20 :infantry]] }
 
-## License
+To determine the odds of each side winning, we call the win-percentages function, also passing in the die to use (see below) and the number of trials to run, e.g.:
+
+    (win-percentages { :attacker [[5 :infantry] [10 :armor]]
+                       :defender [[20 :infantry] [2 :armor]] }
+                     d6
+                     1000)
+
+This runs 1000 trials of the battle using a six-sided die (standard) and gives us a hash with the expected winning percentage of both the attacker and defender, e.g.:
+
+    {:defender 0.936, :attacker 0.064}
+
+Some Improvements
+-----------------
+
+I can't think of any.  Okay, just kidding.
+
+* Make a nice DSL for building units and forces, not vectors and hashes
+* Create constructors and accessor functions (see: SICP) for units
+* Send me your improvements via a pull request, or open an issue
+
+License
+-------
 
 Copyright (C) 2011 Kevin W. Beam
 
